--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 		<!-- Generic properties -->
 		
-    	<finalName>osf</finalName>		
+    	<finalName>osft</finalName>		
 		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
 	    <maven.compiler.target>1.6</maven.compiler.target>
 	    <maven.compiler.source>1.6</maven.compiler.source>
@@ -110,6 +110,12 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.16.20</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>	
 </project>
