--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 
 		<dependency>
 			<groupId>org.mybatis</groupId>
-			<artifactId>mybati1s</artifactId>
+			<artifactId>mybatis</artifactId>
 			<version>3.3.1</version>
 		</dependency>
 	</dependencies>
